force-app/main/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Shipping_Address_Line_2__c</fullName>
        <label>Shipping Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line_3__c</fullName>
        <label>Shipping Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>Had to be renamed to make Onesource work.  JM 9/11/10</description>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALDERNEY</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_State_County__c</fullName>
        <label>Shipping State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_ZIP_Postal_Code__c</fullName>
        <label>Shipping ZIP/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>1. Not yet trading with SHL - (definition - the account is new and/or has no trading history with SHL to date)
2. Trading with SHL - (definition - the account has sales recorded with SHL in the last 2 years)
3. Ceased Trading with SHL - (definition - the account has not traded with SHL in the past 12 months but has previously.) 
4. Dead - (Gone out of Business) (definition - The Account for whatever reason is no longer a trading entity)
Previous Values
1. Active with SHL (definition - The account has a track record of sales and/or opportunities managed in the last 2 years)
2. Inactive with SHL (definition - The account is still a trading account but there has been no activity with SHL (sales or opportunities managed) in the last 2 years)</description>
        <inlineHelpText>Status indicates if Account is approved or not. If you believe an unapproved Account should be Approved, Submit for Approval.</inlineHelpText>
        <label>Account Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                    <default>true</default>
                    <label>Unapproved</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Unapproved - Out of Business</fullName>
                </value>
                <value>
                    <fullName>Unapproved - Trade Not Allowed</fullName>
                </value>
                <value>
                    <fullName>Unapproved - Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_Comment__c</fullName>
        <description>This field is updated by a daily job from Sun and its value is set to the CMMNT field of the customer in the CUST table of Sun.</description>
        <inlineHelpText>This field is updated by a daily job from Sun and its value is set to the CMMNT field of the customer in the CUST table of Sun.</inlineHelpText>
        <label>Sun Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sun_Shows_Valid_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated by a daily job from Sun and its value is set according to the credit status of the account in Sun.</description>
        <inlineHelpText>This field is updated by a daily job from Sun and its value is set according to the credit status of the account in Sun.</inlineHelpText>
        <label>Sun Shows Valid Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sun_Status__c</fullName>
        <description>This field is updated by a daily job from Sun and its value is set to the STATUS field of the customer in the CUST table of Sun as per the following mapping:
0 - Open,1 - Hidden, 2 - Suspended, 3 - Closed</description>
        <inlineHelpText>This field is updated by a daily job from Sun and its value is set to the STATUS field of the customer in the CUST table of Sun</inlineHelpText>
        <label>Sun Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_MD_Region__c</fullName>
        <label>Super MD Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Super_MD_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <formula>TEXT(Territory__r.Super_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Tier__c</fullName>
        <label>Target Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Rest</fullName>
                    <isActive>false</isActive>
                    <label>Rest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Territory associated with an account should be active</errorMessage>
            <filterItems>
                <field>Territory__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_TC_Upgrade_records__c</fullName>
        <label>Total TC Upgrade records</label>
        <summaryForeignKey>Talent_Central__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZI_Employee_Count__c</fullName>
        <label>ZI Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>